--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0"/>
 	<title>Document</title>
 	<style>
 		*{margin: 0;padding: 0;}
+
 
 	</style>
 </head>
